<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gir.cuciindong.InformasiLaundry"
    android:orientation="vertical"
    android:background="#f2f2f2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="#b3b3b3"
        android:padding="24dp">

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="#00000000"
            android:src="@drawable/ic_arrow_back_black_24dp"

            />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_nama_laundry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_laundry"
        android:textColor="#1a1a1a"
        android:textSize="28sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/txt_alamat_laundry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/alamat_laundry"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hari_laundry"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strip"
            android:layout_marginStart="4dp"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jam_laundry"
            android:layout_marginStart="4dp"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="280dp"
        android:layout_height="2dp"
        android:layout_marginLeft="24dp"
        android:orientation="horizontal"
        android:background="#b3b3b3">


    </LinearLayout>

</LinearLayout>
