<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gir.cuciindong.RegisterMitra1"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/layout_register_mitra1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/layout_register_mitra" />

    <ImageView
        android:id="@+id/img_logo_mitra"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"/>

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_logo_mitra"
        android:layout_marginTop="60dp"
        android:textColor="#f9f9f9"
        />

    <EditText
        android:id="@+id/et_email_register_mitra"
        android:layout_below="@id/txt_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:textSize="14sp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_password_register_mitra"
        android:layout_below="@id/et_email_register_mitra"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:textSize="14sp"
        android:inputType="textPassword"/>


    <EditText
        android:id="@+id/et_nama_register_mitra"
        android:layout_below="@id/et_password_register_mitra"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/nama_laundry_low"
        android:textSize="14sp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/et_alamat_register_mitra"
        android:layout_below="@id/et_nama_register_mitra"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/alamat"
        android:textSize="14sp"
        android:inputType="textPersonName"/>


    <EditText
        android:id="@+id/et_telepon_register_mitra"
        android:layout_below="@id/et_alamat_register_mitra"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/telp"
        android:textSize="14sp"
        android:inputType="phone"/>

    <Button
        android:id="@+id/btn_register_mitra"
        android:layout_below="@id/et_telepon_register_mitra"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:background="@drawable/roundedbutton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_login_p"
        android:text="@string/login_p"
        android:layout_below="@id/btn_register_mitra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:textColor="#f9f9f9"
        android:textAllCaps="false"
        android:background="#00000000"
        android:textSize="12sp"
        />


</RelativeLayout>
