<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gir.cuciindong.LoginMitra"
    android:background="@drawable/gradient">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/layout_login_mitra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/layout_login_mitra"
        android:scaleType="fitXY"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_logo_mitra"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_logo_mitra"
        android:layout_marginTop="60dp"
        android:textColor="#f9f9f9"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_email_login_mitra"
        android:layout_below="@id/txt_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/email"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_password_login_mitra"
        android:layout_below="@id/et_email_login_mitra"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login_mitra"
        android:layout_below="@id/et_password_login_mitra"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textSize="16sp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:background="@drawable/roundedbutton"
        android:textAllCaps="false"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/btn_register_p"
        android:text="@string/register_p"
        android:layout_below="@id/btn_login_mitra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="60dp"
        android:textColor="#f9f9f9"
        android:background="#00000000"
        android:textAllCaps="false"/>

</RelativeLayout>
